tests/cases/parser/types/missing_ref_type.stderr
error: expected a type annotation, however received a `=`
 --> $DIR/missing_ref_type.hash:3:6
2 |   
3 |   k: & = & [1,2,3,4,5,6];
  |        ^ 
  = help: expected either `identifier`, `!`, `#`, `&`, `<`, `(`, `{`, or `[`
